# SwarmPlanning

./: CMakeLists.txt  init_traj_generator.cpp  setting  sfc_generator.cpp  todo
bac/: init_traj_generator2.cpp
debug/: Aeq.txt  asdf  deq.txt  dlq.txt  qpex0.lp  qpex1.lp
include/: BoxGenerator.hpp  ECBSLauncher.hpp  SwarmPlanner.hpp
launch/: create_octomap_world.launch  runsim_2agents.launch  runsim_4agents .launch  runsim_4agents.launch  runsim_8agents.launch  runsim_8agents_2.launch  runsim_8agents_scurve4.launch  runsim_8agents_scurve5.launch  runsim_8agents_walls3.launch  runsim_px4_8agents.launch  runsim_walls2_8agents.launch  setup_2agents.launch  setup_4agents.launch  setup_8agents.launch  setup_8agents_2.launch  setup_8agents_scurve4.launch  setup_8agents_scurve5.launch  setup_8agents_walls2.launch  setup_8agents_walls3.launch  setup_walls2_8agents.launch
launch/rviz_config/: config_8agents.rviz
src/: blend.cpp  init_cond_publisher.cpp  init_traj_generator.cpp  obstacle_box_generator.cpp  random_map_generator.cpp  sfc_generator.cpp
worlds/: face.bt  s-curve.bt  s-curve2.bt  s-curve3.bt  walls.bt
